# rtp-capture-tool

./: .gitignore  Makefile  README.md  REFACTORING_IMPLEMENTATION_SUMMARY.md  ROOT_CAUSE_ANALYSIS.md  RUN_TESTS.sh  TESTE_EXECUTADO.md  demo_phase2_correlators.py  pyproject.toml  run_debug.sh  temp_analyze_sip.py  test_capture_flow.sh  test_strategy_import.py
benchmarks/: e2e_version_compare.json
config/: hosts.yaml.example  runtime.env.example
docs/: DNS_RESOLUTION.md  correlation-doc
rtphelper/: __init__.py  capture.py  cli.py  config_loader.py  decrypt.py  dns_resolver.py  env_loader.py  logging_config.py  logging_setup.py  sip_sdes.py  size_parser.py  srtp_decode.py  utils.py
scripts/: README_USE_CASE_TESTING.md  analyze_invite_propagation.py  check_use_case.py  clear_python_cache.py  compare_e2e_versions.py  debug_outbound_core.py  e2e_correlation_replay copy.py  e2e_correlation_replay.py  example_modular_architecture.py  full_diagnostic.py  generate_palette_previews.py  inspect_sip_flow.py  load_test_capture_s3.py  quick_correlation_test.py  quick_test_modular_architecture.py  quick_validate_config.py  quick_validate_templates.py  rpcap_diagnose copy.py  rpcap_diagnose.py  run.sh  run_all_phase3_tests.py  run_correlation_worker.py  run_test_with_output.sh  setup_venv_and_fix.sh  test_cancellation.py  test_configurable_correlation.py  test_configurable_correlator.py  test_correlation_debug.py  test_dynamic_correlation.py  test_filter_templates.py  test_find_response_direct.py  test_glob_fix.py  test_host_files_discovery.py  test_new_correlation.py  (+8 more)
(+115 files in other folders)
